[build-system]
requires = [
    "setuptools >= 51.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# Conform to pep8
[tool.black]
line_length = 79
target-version = ['py37']

[tool.mypy]
python_version = 3.7
warn_unused_ignores = true
show_error_codes = true
disable_error_code = []

[tool.pylint.'MESSAGES CONTROL']
disable = []

[tool.pylint.'MASTER']
fail-under = 9.0
